data/derived/comb/progs/unify/prog0050.ml.out
Characters 56-58:
  wwhile (f',b);;
          ^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
